package sk.posam.blog.exception;

public class ImgeNotFondException extends RuntimeException {
    public ImgeNotFondException(String message) {
        super(message);
    }
}
