package sk.posam.blog.exception;

public class SpringBlogException extends RuntimeException {
    public SpringBlogException(String message) {
        super(message);
    }
}
